dist/1.0/bin/sample/retrieveUnpackaged/objects/Thor2FunnelSnapshot__c.object
<CustomObject>
    <description>Custom object for report snapshot</description>
    <fields>
        <fullName>Contract_Length_months__c</fullName>
        <label>Contract Length [months]</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <label>GTS Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>LineType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRD__c</fullName>
        <label>MRD(+/-)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Delta_converted__c</fullName>
        <label>Monthly Revenue Delta (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price_converted__c</fullName>
        <label>Non Recurring Price (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppStage__c</fullName>
        <label>OppStage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>ProductName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <label>Running User</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weighted_MRD_converted__c</fullName>
        <label>Weighted MRD (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Thor2FunnelSnapshot</label>
    <nameField>
        <label>Thor2 Funnel Snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thor2FunnelSnapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>